<resources>
    <string name="app_name">Movemate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Home</string>
    <string name="txt_calculate">Calculate</string>
    <string name="txt_shipment">Shipment</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_tracking">Tracking</string>
    <string name="txt_search_bar">Enter the receipt number...</string>
    <string name="txt_location">Your location</string>
    <string name="txt_location_main">Wertheimer, Illinois</string>
    <string name="txt_shipment_number">Shipment Number</string>
    <string name="txt_shipment_num">NEJ20089934122231</string>
    <string name="txt_sender">Sender</string>
    <string name="txtx_receiver">Receiver</string>
    <string name="txt_receiver_address">Chicago, 6342</string>
    <string name="txt_time">Time</string>
    <string name="txt_status">Status</string>
    <string name="txt_add_stop">Add Stop</string>
    <string name="txt_available_vehicles">Available vehicles</string>
    <string name="txt_destination">Destination</string>
    <string name="txt_sender_location">Sender location</string>
    <string name="txt_packaging">Packaging</string>
    <string name="txt_receiver_location">Receiver location</string>
    <string name="txt_approx_weight">Approx weight</string>
    <string name="txt_what_are_you_sending">What are you sending?</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_estimate">This amount is estimated this will vary if you change your location or weight</string>
    <string name="txt_back_to_home">Back to home</string>
    <string name="txt_shipment_history">Shipment history</string>
    <string name="txt_shipments">Shipments</string>
    <string name="txt_in_progress">in-progress</string>
    <string-array name="packages">
        <item>Box</item>
    </string-array>
</resources>