<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cnsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="alex"
                android:padding="@dimen/screen_padding"
                android:background="@color/color_primary">
                
                <ImageView
                    android:id="@+id/imgProfilePic"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/pic_oga"/>

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:drawablePadding="3dp"
                    android:drawableTint="#F8F7F7"
                    android:drawableStart="@drawable/ic_location_arrow"
                    android:layout_marginStart="@dimen/screen_padding"
                    android:text="@string/txt_location"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/imgProfilePic"
                    app:layout_constraintStart_toEndOf="@id/imgProfilePic"/>

                <TextView
                    android:id="@+id/txtRealLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/txt_location_main"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/txtLocation"
                    app:layout_constraintTop_toBottomOf="@id/txtLocation"
                    app:drawableEndCompat="@drawable/ic_expand_more_24px"
                    app:drawableTint="@color/white" />

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:background="@drawable/circle_white"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintTop_toTopOf="@id/imgProfilePic"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:padding="14dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="60dp"
                    app:layout_constraintTop_toBottomOf="@id/imgProfilePic"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/ic_search_24"
                            app:tint="@color/color_primary" />

                        <TextView
                            android:id="@+id/txtSearch"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/txt_search_bar"
                            android:layout_weight="1"
                            android:layout_marginStart="10dp"/>
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:scaleType="centerCrop"
                            android:layout_marginEnd="6dp"
                            android:layout_marginVertical="6dp"
                            android:src="@drawable/ic_search_scan"/>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/header_text_color"
                android:textStyle="bold"
                android:text="@string/txt_tracking"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="16dp">
                    <ImageView
                        android:id="@+id/imgTractor"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:adjustViewBounds="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/pic_carrier"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                    <TextView
                        android:id="@+id/txtShipmentNumberTx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_shipment_number"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/txtShipmentNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_shipment_num"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="@id/txtShipmentNumberTx"
                        app:layout_constraintTop_toBottomOf="@id/txtShipmentNumberTx"/>

                    <View
                        android:id="@+id/viewDivShipment"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="#66828080"
                        app:layout_constraintTop_toBottomOf="@id/txtShipmentNumber"/>
                    
                    <ImageView
                        android:id="@+id/imgSender"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_marginTop="@dimen/screen_padding"
                        android:src="@drawable/pic_sender"
                        app:layout_constraintStart_toStartOf="@id/viewDivShipment"
                        app:layout_constraintTop_toBottomOf="@id/viewDivShipment"/>

                    <TextView
                        android:id="@+id/txtSender"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/txt_sender"
                        app:layout_constraintTop_toTopOf="@id/imgSender"
                        app:layout_constraintStart_toEndOf="@id/imgSender"/>

                    <TextView
                        android:id="@+id/txtSenderAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="Atlanta, 5243"
                        app:layout_constraintBottom_toBottomOf="@id/imgSender"
                        app:layout_constraintStart_toStartOf="@id/txtSender"/>

                    <TextView
                        android:id="@+id/txtTimeTx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:text="@string/txt_time"
                        app:layout_constraintTop_toTopOf="@id/txtSender"
                        app:layout_constraintStart_toEndOf="@id/txtSender"/>

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:drawablePadding="4dp"
                        android:drawableTint="@color/shipment_in_progress"
                        android:drawableStart="@drawable/ic_circle_solid"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="2 day -3 days"
                        app:layout_constraintBottom_toBottomOf="@id/imgSender"
                        app:layout_constraintStart_toStartOf="@id/txtTimeTx"/>


                    <ImageView
                        android:id="@+id/imgReceiver"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_marginTop="38dp"
                        android:src="@drawable/pic_receiver"
                        app:layout_constraintStart_toStartOf="@id/viewDivShipment"
                        app:layout_constraintTop_toBottomOf="@id/imgSender"/>

                    <TextView
                        android:id="@+id/txtReceiver"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/txtx_receiver"
                        app:layout_constraintTop_toTopOf="@id/imgReceiver"
                        app:layout_constraintStart_toEndOf="@id/imgReceiver"/>

                    <TextView
                        android:id="@+id/txtReceiverAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/txt_receiver_address"
                        app:layout_constraintBottom_toBottomOf="@id/imgReceiver"
                        app:layout_constraintStart_toStartOf="@id/txtReceiver"/>

                    <TextView
                        android:id="@+id/txtStatusTx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_status"
                        app:layout_constraintTop_toTopOf="@id/txtReceiver"
                        app:layout_constraintStart_toStartOf="@id/txtTimeTx"/>

                    <TextView
                        android:id="@+id/txtStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="6dp"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="Waiting to collect"
                        app:layout_constraintBottom_toBottomOf="@id/imgReceiver"
                        app:layout_constraintStart_toStartOf="@id/txtStatusTx"/>


                    <View
                        android:id="@+id/viewDivReceiver"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="28dp"
                        android:background="#66828080"
                        app:layout_constraintTop_toBottomOf="@id/imgReceiver"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/screen_padding"
                        android:text="@string/txt_add_stop"
                        android:gravity="center_vertical"
                        android:textColor="#FF9800"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewDivReceiver"
                        app:drawableStartCompat="@drawable/ic_add_24px"
                        app:drawableTint="#FF9800" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/header_text_color"
                android:textStyle="bold"
                android:text="@string/txt_available_vehicles"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lstVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>