<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.CalculateFragment">

    <data>
        <variable
            name="fragment"
            type="com.mendhie.movemate.presentation.fragments.CalculateFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/color_primary"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/ic_nav_back" >
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:text="@string/txt_calculate"
                    android:layout_gravity="center" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/screen_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_destination"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/header_text_color"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    app:cardElevation="0dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="26dp"
                    app:cardCornerRadius="@dimen/screen_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/screen_padding">


                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#F5F5F5"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp"
                            android:layout_marginHorizontal="1dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="28dp"
                                    android:layout_height="28dp"
                                    android:layout_marginStart="4dp"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/ic_shipping_box_send"
                                    app:tint="#757575" />

                                <View
                                    android:layout_width="2dp"
                                    android:layout_height="26dp"
                                    android:layout_marginStart="6dp"
                                    android:background="#99757575"/>

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/text_input_height"
                                    android:layout_marginStart="6dp"
                                    android:textCursorDrawable="@null"
                                    android:background="@android:color/transparent"
                                    android:hint="@string/txt_sender_location"
                                    android:textColor="@color/header_text_color"
                                    android:textColorHint="@color/color_text_grey" />

                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/screen_padding"
                            android:backgroundTint="#F5F5F5"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp"
                            android:layout_marginHorizontal="1dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="28dp"
                                    android:layout_height="28dp"
                                    android:scaleType="centerCrop"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/ic_box_receive"/>

                                <View
                                    android:layout_width="2dp"
                                    android:layout_height="26dp"
                                    android:layout_marginStart="6dp"
                                    android:background="#99757575"/>

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/text_input_height"
                                    android:layout_marginStart="6dp"
                                    android:textCursorDrawable="@null"
                                    android:textColor="@color/header_text_color"
                                    android:background="@android:color/transparent"
                                    android:hint="@string/txt_receiver_location"
                                    android:textColorHint="@color/color_text_grey" />

                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/screen_padding"
                            android:backgroundTint="#F5F5F5"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp"
                            android:layout_marginHorizontal="1dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="28dp"
                                    android:layout_height="28dp"
                                    android:scaleType="centerCrop"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/ic_time_piece"
                                    app:tint="#757575" />

                                <View
                                    android:layout_width="2dp"
                                    android:layout_height="26dp"
                                    android:layout_marginStart="6dp"
                                    android:background="#99757575"/>

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/text_input_height"
                                    android:layout_marginStart="6dp"
                                    android:textCursorDrawable="@null"
                                    android:textColor="@color/header_text_color"
                                    android:hint="@string/txt_approx_weight"
                                    android:textColorHint="@color/color_text_grey"
                                    android:background="@android:color/transparent"/>

                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtPackaging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:textColor="@color/header_text_color"
                    android:text="@string/txt_packaging"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/color_text_grey"
                    android:text="@string/txt_what_are_you_sending"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginTop="20dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="14dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:gravity="center_vertical">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="34dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:layout_marginStart="4dp"
                            android:src="@drawable/pic_box" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="26dp"
                            android:layout_marginStart="6dp"
                            android:background="#99757575"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/text_input_height"
                            android:entries="@array/packages"
                            android:layout_marginStart="6dp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/txtCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/txt_categories"
                    android:textStyle="bold"
                    android:textColor="@color/header_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text_grey"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="4dp"
                    android:text="@string/txt_what_are_you_sending"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lstCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:text="@string/txt_calculate"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/color_accent"
                    app:cornerRadius="28dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>